--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,8 @@
 
 header {
     background-color: #ff6900;
-    height: 80px;
     width: 100%;
+    height: 80px;
     position: fixed;
     top: 0;
     left: 0;
@@ -22,13 +22,13 @@ header {
     align-items: center;
 }
 
-ul {
+ .lista { /*utilizzata anche per lista footer  */
     list-style: none;
     display: flex;
     padding-left: 0;
 }
 
-li {
+.lista.header li {
     padding-right: 5px;
     color: white;
     font-weight: 700;
@@ -53,6 +53,60 @@ i {
     padding-left: 5px;
     color: white;
 }
+
+/* main  */
+
+main {
+    margin-top: 80px;
+}
+
+/* footer  */
+
+footer {
+     background-color:#1a1a1a; 
+    height: 100px;
+    width: 100%;
+    color: white;
+}
+
+.container.footer {
+    width:80%;
+    height: 100%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+h3 {
+    padding-bottom: 10px;
+}
+
+/* .lista sta sopra in header */
+
+.lista.footer li {
+    padding-right: 7px;
+    color: white;
+    
+}
+
+a {
+    color: white;
+    text-decoration: none;
+}
+
+a:hover {
+    color: rgb(87, 87, 243);
+}
+
+.trovaci{
+    font-weight: 700;
+    padding-bottom: 10px;
+}
+
+
+
+
 
 /* debug
 
