--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+/*  */
+/* header  */
+/*  */
+
 header {
     background-color: #ff6900;
     width: 100%;
@@ -22,7 +26,7 @@ header {
     align-items: center;
 }
 
- .lista { /*utilizzata anche per lista footer  */
+.lista { /*utilizzata anche per lista footer  */
     list-style: none;
     display: flex;
     padding-left: 0;
@@ -32,7 +36,6 @@ header {
     padding-right: 5px;
     color: white;
     font-weight: 700;
-    
 }
 
 
@@ -60,10 +63,17 @@ main {
     margin-top: 80px;
 }
 
+/*  */
+/* main */
+/*  */
+
+
+/*  */
 /* footer  */
+/*  */
 
 footer {
-     background-color:#1a1a1a; 
+    background-color:#1a1a1a; 
     height: 100px;
     width: 100%;
     color: white;
@@ -83,13 +93,12 @@ h3 {
 }
 
 /* .lista sta sopra in header */
-
 .lista.footer li {
     padding-right: 7px;
     color: white;
-    
 }
 
+/* a viene utilizzato anche sopra in header  */
 a {
     color: white;
     text-decoration: none;
@@ -105,10 +114,10 @@ a:hover {
 }
 
 
+/*  */
+/* debug */
 
-
-
-/* debug
+/*  
 
 .container.header {
     background-color: aquamarine;
