--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ header {
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 10;
 }
 
 .container.header {
@@ -70,21 +71,54 @@ main {
     width:80%;
     height: 100%;
     margin: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     background-color: blue;
 }
 
 .row.main {
     display: flex;
-    height: 200px;
 }
 
-.product-column
+.product-column {
+    width: calc(100% /3);
+    margin: 5px;
+    border: 1px solid black;
+    position: relative;
+}
 
-img.product {
+.img.product {
     height: 100%;
+    width: 100%;
+    text-align: center;
+    
+}
+
+.like{
+    color: black;
+    background-color: white;
+    height: 15px;
+    width: 15px;
+    position: absolute;
+    top: 5px;
+    right: 0;
+}
+
+.labels {
+    position: absolute;
+    bottom: 20px;
+    left: 0px;
+}
+
+.label {
+    padding: 2px;
+    color: white;
+} 
+
+.label.discount {
+    background-color: red;
+}
+
+.label.sostenibility {
+    background-color: green;
 }
 
 /*  */
@@ -96,6 +130,7 @@ footer {
     height: 100px;
     width: 100%;
     color: white;
+    margin-top: 30px;
 }
 
 .container.footer {
@@ -165,3 +200,7 @@ border: 1px solid black;
     border: 1px solid black;
 }
 */
+
+.product-column {
+border: 1px solid black;
+}
